--- a/src/app/web-app/view/view.component.html
+++ b/src/app/web-app/view/view.component.html
@@ -4,12 +4,12 @@
     <div class="heading bg-white w-100 row mx-0" *ngIf="!isSelPage">
       <div class="col-4 align-self-center">{{cntnt.name}}</div>
       <div class="col-4 align-self-center d-flex justify-content-center">
-        <div class="btn" placement="bottom" *ngIf="cntnt.contentType==1"
+        <div class="btn btn-lg" placement="bottom" *ngIf="cntnt.contentType==1"
           ngbTooltip="{{leftSide?'Hide Pages':'Show Pages'}}" (click)="leftSide = !leftSide">
           <i class="fas fa-th-large"></i>
         </div>
         <div class="dropdown">
-          <button class="btn" type="button" id="moreDD" data-toggle="dropdown">
+          <button class="btn btn-lg" type="button" id="moreDD" data-toggle="dropdown">
             <i class="fas fa-ellipsis-h"></i>
           </button>
           <div class="dropdown-menu" aria-labelledby="moreDD">
@@ -19,7 +19,7 @@
           </div>
         </div>
         <div class="dropdown" *ngIf="cntnt.contentType==1">
-          <button class="btn" type="button" id="addCol" data-toggle="dropdown">
+          <button class="btn btn-lg" type="button" id="addCol" data-toggle="dropdown">
             <i class="fas fa-plus-circle"></i>
           </button>
           <div class="dropdown-menu" aria-labelledby="addCol">
@@ -29,11 +29,11 @@
         </div>
       </div>
       <div class="col-4 text-right align-self-center">
-        <div class="btn" *ngIf="!isFullScreen" (click)="openFullscreen()" ngbTooltip="View in Full Screen"><i
+        <div class="btn btn-lg" *ngIf="!isFullScreen" (click)="openFullscreen()" ngbTooltip="View in Full Screen"><i
             class="fas fa-expand-alt"></i></div>
-        <div class="btn" *ngIf="isFullScreen" (click)="closeFullscreen()" ngbTooltip="Exit from Full Screen"><i
+        <div class="btn btn-lg" *ngIf="isFullScreen" (click)="closeFullscreen()" ngbTooltip="Exit from Full Screen"><i
             class="fas fa-compress-arrows-alt"></i></div>
-        <div class="btn" (click)="goBack()"><i class="fas fa-times"></i></div>
+        <div class="btn btn-lg" (click)="goBack()"><i class="fas fa-times"></i></div>
       </div>
       <div class="btn btn-outline-secondary right-side-toggle" [ngClass]="{'pdfView': cntnt.contentType == 1}"
         placement="left" ngbTooltip="{{rightSide?'Hide Detailed Section':'Show Detailed Section'}}"
@@ -182,7 +182,8 @@
                 </div>
                 <mat-form-field appearance="outline" class="w-100">
                   <mat-label>Leave a comment</mat-label>
-                  <textarea matInput placeholder="Leave a comment" [(ngModel)]="cmnt" name="cmnt" maxlength="500" required></textarea>
+                  <textarea matInput placeholder="Leave a comment" [(ngModel)]="cmnt" name="cmnt" maxlength="500"
+                    required></textarea>
                 </mat-form-field>
               </div>
               <div class="form-group text-right">
