Dev Prod Build, text change of hide lable in smart folder modal

--- a/src/app/hub/content-workspace/content-workspace.component.html
+++ b/src/app/hub/content-workspace/content-workspace.component.html
@@ -1417,7 +1417,7 @@
         </mat-form-field>
         <div class="options">
           Options
-          <mat-checkbox class="d-block" formControlName="hideLabelInWorkspace">Hide label in Experience</mat-checkbox>
+          <mat-checkbox class="d-block" formControlName="hideLabelInWorkspace">Hide label in Workspace</mat-checkbox>
         </div>
       </div>
       <hr>
