--- a/src/app/web-app/resource/collection/collection-list/collection-list.component.html
+++ b/src/app/web-app/resource/collection/collection-list/collection-list.component.html
@@ -16,7 +16,7 @@
   </div>
   <ul ngbNav #fldrNav="ngbNav" [(activeId)]="activeColctn"
     class="nav-tabs justify-content-end border-bottom border-color-grey mr-3 w-100 pr-2"
-    (activeIdChange)="changeDispColctn()">
+    (activeIdChange)="listColctn()">
     <li [ngbNavItem]="1">
       <a ngbNavLink>Active</a>
     </li>
