--- a/src/app/setting/setting.component.html
+++ b/src/app/setting/setting.component.html
@@ -4,7 +4,7 @@
       <app-profile></app-profile>
     </span>
   </mat-tab>
-  <mat-tab label="Divisions">
+  <mat-tab label="Hubs">
     <span *ngIf="activeIndex==1">
       <app-division></app-division>
     </span>
