--- a/src/app/home-layout/header/header.component.html
+++ b/src/app/home-layout/header/header.component.html
@@ -71,7 +71,7 @@
             <a class="dropdown-item" href="javascript:void(0)"><i class="fas fa-envelope mr-2"></i>My Messages</a>
             <a class="dropdown-item" [routerLink]="'/test'"><i class="fas fa-clipboard mr-2"></i>My Tasks</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" [routerLink]="'/account/divisions/list'"><i
+            <a class="dropdown-item" [routerLink]="'/account/hubs/list'"><i
                 class="fas fa-cog mr-2"></i>Settings</a>
             <a class="dropdown-item" href="javascript:void(0)"><i class="fas fa-lock mr-2"></i>Lock Screen</a>
             <a class="dropdown-item" target="_blank" [routerLink]="'/web-app/resource/experiences'">
